rewrote theory-reflection and bracketed Eq refs

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -47,6 +47,12 @@
 %		3) questioning the supposed novelty and practical impact of MMs
 %		4) that probably no dielectric-only metamaterial can be built for permittivity contrast below 50
 
+%+ achievements <------- todo add
+	%+ When one can use N,
+	%+ Unambiguous N retrieval, and resulting nontrivial conclusions
+	%+
+%+ Kramers-Kronig check of the RodArray spectrum (or some other?)
+
 
 
 
