--- a/t.tex
+++ b/t.tex
@@ -44,11 +44,11 @@
 \chapter{Introduction}
 \input{intro.tex}
 
-\chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- K. Lewin, A. Einstein or whoever was the first to realize this
+\chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- probably K. Lewin
 \input{theory.tex}
 
 \chapter{Numerical methods} 
-% Computers are useless. They can only give you answers. -- Pablo Picasso (1968) 
+% Computers are useless. They can only give you answers. -- P. Picasso (1968)
 \input{numeric.tex}
 
 \chapter{Experimental methods}
@@ -58,8 +58,8 @@
 % The purpose of computing is insight, not numbers. -- R. W. Hamming
 \input{result.tex}
 
-\chapter{Conclusion} %Scientific discovery and scientific knowledge have been achieved only by those who have gone in pursuit of them without any practical purpose whatsoever in view. -- Max Planck The New Science (1959), 93. 
-%\input{conclusion.tex}
+\chapter{Conclusion} %Scientific discovery and scientific knowledge have been achieved only by those who have gone in pursuit of them without any practical purpose whatsoever in view. -- M. Planck
+\input{conclusion.tex}
 
 \label{endtext} 
 
